UI Update for landing page

--- a/monitoring/templates/monitoring/home.html
+++ b/monitoring/templates/monitoring/home.html
@@ -84,7 +84,7 @@
         </div>
     </footer>
 
-    <script src="{% static 'js/home.js' %}"></script> <!-- Use the correct path -->
+    <script src="{% static 'js/home.js' %}"></script> 
 
 </body>
 </html>
