--- a/static/css/base.css
+++ b/static/css/base.css
@@ -78,3 +78,121 @@
 .dropdown-content a:hover {
     background-color: #141313;
 }
+
+.container {
+    display: flex;
+}
+
+.sidebar {
+    width: 250px;
+    background-color: #2c3e50;
+    color: white;
+    position: relative;
+}
+
+.sidebar.collapsed {
+    width: 80px;
+}
+
+.sidebar-header {
+    padding: 20px;
+    cursor: pointer;
+}
+
+.sidebar-header h2 {
+    margin: 0;
+}
+
+.sidebar.collapsed .sidebar-header h2 {
+    display: none;
+}
+
+.sidebar-menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar-menu li {
+    padding: 15px;
+    text-align: left;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar-menu li a {
+    text-decoration: none;
+    color: white;
+    display: inline-block;
+    width: 100%;
+}
+
+.sidebar-menu li i {
+    margin-right: 10px;
+}
+
+.sidebar.collapsed .sidebar-menu li a {
+    text-align: center;
+    padding-left: 0;
+}
+
+.sidebar.collapsed .sidebar-menu li a span {
+    display: none;
+}
+
+.sidebar.collapsed .sidebar-menu li i {
+    margin-right: 0;
+}
+
+.account-button {
+    padding: 15px;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.sidebar.collapsed .account-button span {
+    display: none;
+}
+
+.sidebar.collapsed .account-button i {
+    margin-right: 0;
+}
+
+.dropdown-content {
+    display: none;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    position: absolute;
+    background-color: #34495e;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+}
+
+.content {
+    flex-grow: 1;
+    padding: 20px;
+}
+
+#menu-icon {
+    display: none;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    margin: 20px;
+}
+
+
+.sidebar.collapsed + #menu-icon {
+    display: block;
+}
